Fix internal watchOS build https://bugs.webkit.org/show_bug.cgi?id=198344 <rdar://problem/51128965>

Reviewed by Geoff Garen.

* Misc/WebDownload.h:
Fix watchOS like we did iosmac in r245596



Canonical link: https://commits.webkit.org/212372@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@245862 268f45cc-cd09-0410-ab3c-d52691b4dbfc